Issues with overflow

--- a/homework/Homework-1/flask_app/static/main/css/footer.css
+++ b/homework/Homework-1/flask_app/static/main/css/footer.css
@@ -5,4 +5,9 @@
     margin-top: auto;
     padding-top: 1%;
 
+    position: fixed;
+    width: 100%; 
+    left: 0px;
+    bottom: 0px;
+
 }
