--- a/homework/Homework-1/flask_app/static/main/css/main.css
+++ b/homework/Homework-1/flask_app/static/main/css/main.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: row;
     max-height: 50vh;
-    width: 50vw;
+    width: 80vw;
     gap: 20px;
 
 }
@@ -28,7 +28,7 @@
 }
 
 .personal-description {
-    overflow-y: scroll;
+    overflow-y: auto;
     width: 100%;
     height: auto;
 
@@ -45,34 +45,61 @@
     text-align: center;
     text-justify: center;
     margin-top: 20;
+    
+}
+
+
+.Main-Project-Text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start; 
+    height: auto; 
+    width: 100vw;
+    max-width: 100%;
 
 }
 
 #purpose {
+    width: 100%; 
     text-align: center;
-    text-justify: center;
-
+    padding-top: 2%; 
+    margin-top: 0; 
+    padding-bottom: 1%; 
 }
 
 
 
+.line {
+    color: #000000;
+    
+    width: 60%;
+    text-align: center;
+    margin: 2%;
 
+}
 
 
 
 @media screen and (max-width: 650px) {
 
-    .about {
-    
-        overflow: visible;
-        flex-direction: column;
+    .about { 
 
+        flex-direction: column;
+  
     }
+
 
 
     .personal-description, .personal-photo, .fun-fact {
         width: 80vw;
+        
     }
+
+    .personal-description {
+        overflow-y: visible;
+    }
+  
     
 
     
