--- a/homework/Homework-1/flask_app/static/main/css/navbar.css
+++ b/homework/Homework-1/flask_app/static/main/css/navbar.css
@@ -20,6 +20,7 @@
     list-style-type: none;
     color: #FFFFFF;
     width: 100vw;
+    max-width: 100%;
     height: 8vh;
     
      
@@ -29,12 +30,14 @@
     padding-left: 5%;
     margin-right: auto;
     margin-left: 1%;
+    flex: 10;
     
 }
 
 .navitems {
     margin: 1%;
     max-width: 100%;
+    flex: 1;
  
 
 }
